--- a/Public/assets/css/login.css
+++ b/Public/assets/css/login.css
@@ -1,52 +1,57 @@
-    body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(180deg,rgb(215, 174, 11),rgb(255, 255, 255));
-    font-family: 'Poppins', sans-serif;
-  }
-    .login-card {
-      display: flex;
-      background: #fff;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 800px;
-      max-width: 100%;
-    }
-    .login-image {
-      flex: 1;
-      background: url('../images/dripnstylelogo.png') center/cover no-repeat;
-      background-color: #fef8e6;
-    }
-
-    .login-form {
-      flex: 1;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .login-form h3 {
-      font-weight: 700;
-    }
-
-    .login-form input[type="password"],
-    .login-form input[type="email"] {
-    width: 100%;
-    padding: 12px 15px;
-    margin: 10px 0;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    transition: all 0.3s ease;
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(180deg,rgb(215, 174, 11),rgb(255, 255, 255));
+  font-family: 'Poppins', sans-serif;
 }
 
-    .login-form input[type="password"]:hover,
-    .login-form input[type="email"]:hover,
-    .login-form input[type="password"]:focus,
-    .login-form input[type="email"]:focus {
-    border-color: #ffd700;
-    box-shadow: 0 0 8px #ffd700;
-    outline: none;
+.login-card {
+  display: flex;
+  background: #fff;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 800px;
+  max-width: 100%;
+}
+
+.login-image {
+  flex: 1;
+  background: url('../images/dripnstylelogo.png') center/cover no-repeat;
+  background-color: #fef8e6;
+}
+
+.login-form {
+  flex: 1;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login-form h3 {
+  font-weight: 700;
+}
+.login-form input[type="text"],
+.login-form input[type="password"],
+.login-form input[type="email"] {
+  width: 100%;
+  padding: 12px 15px;
+  margin: 10px 0;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.login-form input[type="password"]:hover,
+.login-form input[type="email"]:hover,
+.login-form input[type="text"]:hover,
+.login-form input[type="password"]:focus,
+.login-form input[type="email"]:focus,
+.login-form input[type="text"]:focus {
+  border-color: #ffd700;
+  box-shadow: 0 0 8px #ffd700;
+  outline: none;
 }
